2007-10-08  Akim Demaille  <demaille@gostai.com>

	k2 inherits k1 (poor little guy, so young and yet so old).
	* src/parser/bison/ugrammar.y: Support inherits/disinherits.

2007-10-08  Akim Demaille  <demaille@gostai.com>

	tests/ sync.
	* tests-local.mk: stopif fails.

2007-10-08  Akim Demaille  <demaille@gostai.com>

	More Object features.
	* src/object/object-class.cc (CHANGE_SLOT): Rename as...
	(SLOT_CHANGE): this, for consistency.
	(DECLARE): Rename as...
	(DECLARE1): this.
	(object_class_removeSlot, DECLARE2): New.
	* tests-local.mk: k2-closure fails.

2007-10-07  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Workaround a bug in MSVC 2005 SP1.
	See:
	http://forums.microsoft.com/msdn/showpost.aspx?postid=987536
	http://support.microsoft.com/kb/930198 */
	* dev/ast-default-visitor-gen,
	* dev/ast-visitor-gen: Add typedef to work around a bug in MSVC 2005
	SP1.
	* src/ast/visitor.hxx: Adjust to use the workaround typedef.

2007-10-04  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Simplify the way the `current_' value is handled.
	* src/runner/runner.cc (operator()(If)): Don't deal with current_
	anymore.  This reverts the change done 15 revisions ago (8 patches
	ago).
	(operator()(Call)): Use boost::shared_ptr::reset instead of `= 0'.
	(operator()(Nary)): Reset the `current_' value before starting to
	evaluate a new child of the Nary.
	(operator()(Noop)): Reset the `current_' value.
	(operator()(While)): Simplify.  `while' doesn't return a value.

2007-10-04  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Properly clean the build tree.
	* src/parser/bison/bison.mk (CLEANFILES): Add the HTML file produced
	by output-to-html.

2007-10-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Use the replacement implementation of `round' if needed.
	* src/object/float-class.cc [!HAVE_ROUND]: Use the replacement
	implementation of libport.

2007-10-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Partial fix of distcheck.
	* Makefile.am (EXTRA_DIST): Adjust properly: distribute required