@@ -1,19 +1,0 @@
-## Process this file with automake --
-include $(top_srcdir)/src/kernel.mk
-
-noinst_LTLIBRARIES = librunner.la
-
-librunner_la_SOURCES =				\
-coroutine.hh					\
-coroutine.hxx					\
-coroutine.cc					\
-coroutine-yield.hh				\
-job.hh						\
-job.hxx						\
-fwd.hh						\
-runner.hh					\
-runner.hxx					\
-runner.cc					\
-scheduler.hh					\
-scheduler.hxx					\
-scheduler.cc
