@@ -1,0 +1,14 @@
+dist_libkernel_la_SOURCES +=			\
+runner/coroutine.hh				\
+runner/coroutine.hxx				\
+runner/coroutine.cc				\
+runner/coroutine-yield.hh			\
+runner/job.hh					\
+runner/job.hxx					\
+runner/fwd.hh					\
+runner/runner.hh				\
+runner/runner.hxx				\
+runner/runner.cc				\
+runner/scheduler.hh				\
+runner/scheduler.hxx				\
+runner/scheduler.cc
